--- a/docs/notebooks/T3/2Graphes_avec_graphviz-Nathanael.ipynb
+++ b/docs/notebooks/T3/2Graphes_avec_graphviz-Nathanael.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -195,10 +195,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Graph at 0x268474724d0>"
+       "<graphviz.graphs.Graph at 0x1ce0665f250>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,6 +454,10 @@
     "    \n",
     "    def ajoute_arete(self,s,t):\n",
     "        '''Ajoute si nécessaire les sommets s et t puis crée si elle n'existait pas une arête entre s et t'''\n",
+    "        if s not in self.d:\n",
+    "            self.d[s] = []\n",
+    "        if t not in self.d:\n",
+    "            self.d[t] = []\n",
     "        self.d[s].append(t)\n",
     "        self.d[t].append(s)\n",
     "        \n",
@@ -504,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -569,10 +573,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Graph at 0x268479f7610>"
+       "<graphviz.graphs.Graph at 0x1ce06722e10>"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -924,10 +928,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Graph at 0x26847ce0210>"
+       "<graphviz.graphs.Graph at 0x1ce0665f410>"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -952,24 +956,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 22,
    "metadata": {
     "editable": false
    },
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "0",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[67], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m0\u001b[39m,\u001b[39m10\u001b[39m,\u001b[39m2\u001b[39m):\n\u001b[0;32m      5\u001b[0m     \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m,\u001b[39m10\u001b[39m,\u001b[39m2\u001b[39m):\n\u001b[1;32m----> 6\u001b[0m         GTestBis\u001b[39m.\u001b[39;49majoute_arete(i,j)\n\u001b[0;32m      7\u001b[0m \u001b[39massert\u001b[39;00m [GTestBis\u001b[39m.\u001b[39marete(i,j) \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m10\u001b[39m) \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m10\u001b[39m)]\u001b[39m==\u001b[39m[(i\u001b[39m-\u001b[39mj)\u001b[39m%\u001b[39m\u001b[39m2\u001b[39m\u001b[39m==\u001b[39m\u001b[39m1\u001b[39m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m10\u001b[39m) \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m10\u001b[39m)]\n\u001b[0;32m      8\u001b[0m \u001b[39massert\u001b[39;00m [GTestBis\u001b[39m.\u001b[39mvoisins(i) \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m10\u001b[39m)]\u001b[39m==\u001b[39m[[\u001b[39m1\u001b[39m, \u001b[39m3\u001b[39m, \u001b[39m5\u001b[39m, \u001b[39m7\u001b[39m, \u001b[39m9\u001b[39m], [\u001b[39m0\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m4\u001b[39m, \u001b[39m6\u001b[39m, \u001b[39m8\u001b[39m], [\u001b[39m1\u001b[39m, \u001b[39m3\u001b[39m, \u001b[39m5\u001b[39m, \u001b[39m7\u001b[39m, \u001b[39m9\u001b[39m], [\u001b[39m0\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m4\u001b[39m, \u001b[39m6\u001b[39m, \u001b[39m8\u001b[39m], [\u001b[39m1\u001b[39m, \u001b[39m3\u001b[39m, \u001b[39m5\u001b[39m, \u001b[39m7\u001b[39m, \u001b[39m9\u001b[39m], [\u001b[39m0\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m4\u001b[39m, \u001b[39m6\u001b[39m, \u001b[39m8\u001b[39m], [\u001b[39m1\u001b[39m, \u001b[39m3\u001b[39m, \u001b[39m5\u001b[39m, \u001b[39m7\u001b[39m, \u001b[39m9\u001b[39m], [\u001b[39m0\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m4\u001b[39m, \u001b[39m6\u001b[39m, \u001b[39m8\u001b[39m], [\u001b[39m1\u001b[39m, \u001b[39m3\u001b[39m, \u001b[39m5\u001b[39m, \u001b[39m7\u001b[39m, \u001b[39m9\u001b[39m], [\u001b[39m0\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m4\u001b[39m, \u001b[39m6\u001b[39m, \u001b[39m8\u001b[39m]]\n",
-      "Cell \u001b[1;32mIn[64], line 13\u001b[0m, in \u001b[0;36mGraphe.ajoute_arete\u001b[1;34m(self, s, t)\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39majoute_arete\u001b[39m(\u001b[39mself\u001b[39m,s,t):\n\u001b[0;32m     12\u001b[0m \u001b[39m    \u001b[39m\u001b[39m'''Ajoute si nécessaire les sommets s et t puis crée si elle n'existait pas une arête entre s et t'''\u001b[39;00m\n\u001b[1;32m---> 13\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49md[s]\u001b[39m.\u001b[39mappend(t)\n\u001b[0;32m     14\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39md[t]\u001b[39m.\u001b[39mappend(s)\n",
-      "\u001b[1;31mKeyError\u001b[0m: 0"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test des différentes méthodes précédentes\n",
     "# permet de voir que vos méthodes ont l'air correctes, c'est le cas si cette cellule ne renvoie pas d'erreur\n",
@@ -1006,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,11 +1010,16 @@
     "        \n",
     "    def ajoute_sommet(self,s):\n",
     "        '''Ajoute le sommet s au graphe si celui-ci est un nouveau sommet''' \n",
-    "        pass\n",
+    "        if s not in self.d:\n",
+    "            self.d[s] = []\n",
     "    \n",
     "    def ajoute_arc(self,s,t):\n",
     "        '''Ajoute si nécessaire les sommets s et t puis crée si il n'existait pas un arc de s vers t'''\n",
-    "        pass\n",
+    "        if s not in self.d:\n",
+    "            self.d[s] = []\n",
+    "        if t not in self.d:\n",
+    "            self.d[t] = []\n",
+    "        self.d[s].append(t)\n",
     "        \n",
     "    def arc(self,s,t):\n",
     "        '''Renvoie True s'il y a un arc de s vers t, et False sinon'''\n",
@@ -1031,19 +1027,27 @@
     "    \n",
     "    def sommets(self):\n",
     "        '''Renvoie la liste de tous les sommets du graphe'''\n",
-    "        pass\n",
+    "        sommets = []\n",
+    "        for i in self.d:\n",
+    "            sommets.append(i)\n",
+    "        return sommets\n",
     "    \n",
     "    def successeurs(self,s):\n",
     "        '''Renvoie la liste des successeurs de s'''\n",
-    "        pass\n",
+    "        return self.d[s]\n",
     "    \n",
     "    def degreSortant(self,s):\n",
     "        '''Renvoie le nb d'arcs sortant de s'''\n",
-    "        pass\n",
+    "        return len(self.d[s])\n",
     "    \n",
     "    def degreEntrant(self,s):\n",
     "        '''Renvoie le nb d'arcs entrant dans s'''\n",
-    "        pass\n",
+    "        entrant = 0\n",
+    "        for key in self.d:\n",
+    "            for element in self.d[key]:\n",
+    "                if element == s:\n",
+    "                    entrant += 1\n",
+    "        return entrant\n",
     "    \n",
     "    def affiche(self): \n",
     "        \"Affichage du graphe en utilisant le module graphviz\"\n",
@@ -1065,9 +1069,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\"?>\n",
+       "<!DOCTYPE svg PUBLIC \"-//W3C//DTD SVG 1.1//EN\"\n",
+       " \"http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd\">\n",
+       "<!-- Generated by graphviz version 3.0.0 (20220226.1711)\n",
+       " -->\n",
+       "<!-- Title: G Pages: 1 -->\n",
+       "<svg width=\"90pt\" height=\"260pt\"\n",
+       " viewBox=\"0.00 0.00 90.00 260.00\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
+       "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 256)\">\n",
+       "<title>G</title>\n",
+       "<polygon fill=\"white\" stroke=\"transparent\" points=\"-4,4 -4,-256 86,-256 86,4 -4,4\"/>\n",
+       "<!-- A -->\n",
+       "<g id=\"node1\" class=\"node\">\n",
+       "<title>A</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"27\" cy=\"-234\" rx=\"27\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"27\" y=\"-230.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">A</text>\n",
+       "</g>\n",
+       "<!-- B -->\n",
+       "<g id=\"node2\" class=\"node\">\n",
+       "<title>B</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"27\" cy=\"-90\" rx=\"27\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"27\" y=\"-86.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">B</text>\n",
+       "</g>\n",
+       "<!-- A&#45;&gt;B -->\n",
+       "<g id=\"edge1\" class=\"edge\">\n",
+       "<title>A&#45;&gt;B</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M23.75,-215.89C21.95,-205.54 19.91,-192.06 19,-180 17.8,-164.04 17.8,-159.96 19,-144 19.64,-135.52 20.84,-126.34 22.12,-118.04\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"25.58,-118.55 23.75,-108.11 18.68,-117.41 25.58,-118.55\"/>\n",
+       "</g>\n",
+       "<!-- D -->\n",
+       "<g id=\"node3\" class=\"node\">\n",
+       "<title>D</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"55\" cy=\"-162\" rx=\"27\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"55\" y=\"-158.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">D</text>\n",
+       "</g>\n",
+       "<!-- A&#45;&gt;D -->\n",
+       "<g id=\"edge2\" class=\"edge\">\n",
+       "<title>A&#45;&gt;D</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M33.64,-216.41C36.91,-208.22 40.94,-198.14 44.62,-188.95\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"47.95,-190.05 48.41,-179.47 41.45,-187.45 47.95,-190.05\"/>\n",
+       "</g>\n",
+       "<!-- C -->\n",
+       "<g id=\"node4\" class=\"node\">\n",
+       "<title>C</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"27\" cy=\"-18\" rx=\"27\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"27\" y=\"-14.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">C</text>\n",
+       "</g>\n",
+       "<!-- B&#45;&gt;C -->\n",
+       "<g id=\"edge3\" class=\"edge\">\n",
+       "<title>B&#45;&gt;C</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M27,-71.7C27,-63.98 27,-54.71 27,-46.11\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"30.5,-46.1 27,-36.1 23.5,-46.1 30.5,-46.1\"/>\n",
+       "</g>\n",
+       "<!-- D&#45;&gt;B -->\n",
+       "<g id=\"edge4\" class=\"edge\">\n",
+       "<title>D&#45;&gt;B</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M48.36,-144.41C45.09,-136.22 41.06,-126.14 37.38,-116.95\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"40.55,-115.45 33.59,-107.47 34.05,-118.05 40.55,-115.45\"/>\n",
+       "</g>\n",
+       "</g>\n",
+       "</svg>\n"
+      ],
+      "text/plain": [
+       "<graphviz.graphs.Digraph at 0x1ce067b0290>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Exemple\n",
     "g = DiGraphe()\n",
@@ -1088,20 +1166,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Jeu de tests de la méthode arc (pensez à tester l'arc entre s et t et aussi entre t et s)\n"
+    "# Jeu de tests de la méthode arc (pensez à tester l'arc entre s et t et aussi entre t et s)\n",
+    "g.arc(\"D\", \"B\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Jeu de tests de la méthode arc (pensez à tester l'arc entre s et t et aussi entre t et s)\n"
+    "# Jeu de tests de la méthode arc (pensez à tester l'arc entre s et t et aussi entre t et s)\n",
+    "g.arc(\"B\", \"D\")"
    ]
   },
   {
@@ -1114,11 +1216,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['A', 'B', 'D', 'C']"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# test avec la méthode sommets\n"
+    "# test avec la méthode sommets\n",
+    "g.sommets()"
    ]
   },
   {
@@ -1131,19 +1245,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['B', 'D']"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Jeu de tests avec la méthode voisins\n"
+    "# Jeu de tests avec la méthode voisins\n",
+    "g.successeurs(\"A\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['B']"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g.successeurs(\"D\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1155,11 +1294,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Jeu de tests avec la méthode degreSortant\n"
+    "# Jeu de tests avec la méthode degreSortant\n",
+    "g.degreSortant(\"A\")"
    ]
   },
   {
@@ -1172,16 +1323,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Jeu de tests avec la méthode degreEntrant\n"
+    "# Jeu de tests avec la méthode degreEntrant\n",
+    "g.degreEntrant(\"C\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "editable": false
    },
