--- a/docs/notebooks/Autre/Sujet_GO/Sujet_GO-Nathanael.ipynb
+++ b/docs/notebooks/Autre/Sujet_GO/Sujet_GO-Nathanael.ipynb
@@ -13,8 +13,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### NSI : POO  \n",
-    "### Math : X"
+    "### NSI : POO dans le domaine du jeu vidéo\n",
+    "### Math : Dichotomie et son implémentation / réccurence et récursivité"
    ]
   },
   {
