--- a/docs/notebooks/Autre/Exercices/Exercice_graph_DV-Nathanael.ipynb
+++ b/docs/notebooks/Autre/Exercices/Exercice_graph_DV-Nathanael.ipynb
@@ -54,12 +54,6 @@
     "'''\n",
     "````\n",
     "## 10.2\n",
-    "````python\n",
-    "m = [[0, 1, 0, 1],\n",
-    "     [1, 0, 1, 1],\n",
-    "     [0, 1, 0, 0],\n",
-    "     [1, 1, 0, 0]]\n",
-    "````\n",
     "### 1)"
    ]
   },
@@ -74,6 +68,35 @@
     "    A --- D\n",
     "    B --- C\n",
     "    B --- D\n",
+    "````\n",
+    "### 2)\n",
+    "````python\n",
+    "m = [[0, 1, 0, 1],\n",
+    "     [1, 0, 1, 1],\n",
+    "     [0, 1, 0, 0],\n",
+    "     [1, 1, 0, 0]]\n",
+    "````\n",
+    "### 3)\n",
+    "````python\n",
+    "l = [\"A\", \"C\", \"D\", \"B\"]\n",
+    "````\n",
+    "### 4)\n",
+    "````python\n",
+    "def cycle(G):\n",
+    "    s = random.choice(list(G.keys()))\n",
+    "    p = []\n",
+    "    p.append(s)\n",
+    "    noir=[]\n",
+    "    while len(p)>0:\n",
+    "        u = p.pop()\n",
+    "        for v in G[u]:\n",
+    "            if v not in noir:\n",
+    "                p.append(v)   \n",
+    "        if u in noir.:\n",
+    "            return True\n",
+    "        else :\n",
+    "            noir.append(u)\n",
+    "    return False\n",
     "````"
    ]
   }
