--- a/docs/notebooks/Autre/Sujet_GO/Sujet_GO-Nathanael.ipynb
+++ b/docs/notebooks/Autre/Sujet_GO/Sujet_GO-Nathanael.ipynb
@@ -13,8 +13,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### NSI : POO dans le domaine du jeu vidéo\n",
-    "### Math : Dichotomie et son implémentation / réccurence et récursivité"
+    "### NSI : utilisation poo pour jeu vidéo\n",
+    "### Math/NSI : Réccurence et récursivité"
    ]
   },
   {
@@ -22,9 +22,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Pistes NSI :\n",
-    "- Algorithmes POO dans le domaine du jeu vidéo\n",
-    "- Paradigme de programmation"
+    "#### Plan NSI :\n",
+    "- Introduction :\n",
+    "programmation dans les jeux vidéos\n",
+    "qu'est-ce que la POO ?\n",
+    "question\n",
+    "\n",
+    "De nos jours, les jeux vidéos sont un divertissement partagé par de nombreuses personnes de tout âge et origine. En plus de réunir les "
    ]
   }
  ],
