--- a/docs/notebooks/Autre/Sujet_GO/Sujet_GO-Nathanael.ipynb
+++ b/docs/notebooks/Autre/Sujet_GO/Sujet_GO-Nathanael.ipynb
@@ -13,8 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### NSI : utilisation poo pour jeu vidéo\n",
-    "### Math/NSI : Réccurence et récursivité"
+    "### NSI : POO, graphisme simple en 2d, jeux vidéos -> nombreux corps de métier"
    ]
   },
   {
@@ -23,12 +22,21 @@
    "metadata": {},
    "source": [
     "#### Plan NSI :\n",
-    "- Introduction :\n",
-    "programmation dans les jeux vidéos\n",
-    "qu'est-ce que la POO ?\n",
-    "question\n",
-    "\n",
-    "De nos jours, les jeux vidéos sont un divertissement partagé par de nombreuses personnes de tout âge et origine. En plus de réunir les "
+    "- Introduction :  \n",
+    "les jeux vidéos dans notre quotidient  \n",
+    "regroupe de nombreux métiers  \n",
+    "ce qui permet que les jeux vidéos fonctionnent (programmation et graphismes)  \n",
+    "  \n",
+    "- Suite :  \n",
+    "exemple de programmation avec la POO\n",
+    "qu'est-ce que la POO ?  \n",
+    "avantages  \n",
+    "fonctionnement des graphismes 2d  \n",
+    "-> représentation des interractions (contrôleur) sur un écran de *visualisation*  \n",
+    "exemple poo + graphismes en s'appuyant sur la nuit du code  \n",
+    "  \n",
+    "- Conclusion :  \n",
+    "Les jeux vidéos ne sont donc pas qu'un simple hobby mais bien une industrie moderne qui s'inscrit dans notre monde actuel de par sa popularité mais également de par la richesse des emplois qu'elle offre. Du coeur du jeu la programmation, au rendu final le graphisme, ce sont de nombreuses personnes qui travaillent sur un seul et même jeu des équipes de moins de 10 personnes à celle de plus de 3000 pour les plus gros d'entre eux."
    ]
   }
  ],
