--- a/docs/autre/Sujet_GO/Sujet_GO-Nathanael.ipynb
+++ b/docs/autre/Sujet_GO/Sujet_GO-Nathanael.ipynb
@@ -13,7 +13,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### NSI : POO, graphisme simple en 2d, jeux vidéos -> nombreux corps de métier"
+    "### NSI : POO -> histoire (deux camps) -> toujours d'actualité\n",
+    "/ quel paradigme -> avenir ???"
    ]
   },
   {
@@ -23,7 +24,7 @@
    "source": [
     "#### Plan NSI :\n",
     "- Introduction :  \n",
-    "les jeux vidéos dans notre quotidient  \n",
+    "les jeux vidéos dans notre quotidien  \n",
     "regroupe de nombreux métiers  \n",
     "ce qui permet que les jeux vidéos fonctionnent (programmation et graphismes)  \n",
     "  \n",
